* 1.2.4
	* Bug fixes:
		- Fix addClass() bug, now addClass/removeClass work in the right way now(2015-11-10)
		- Fix "background: url(a.png)" image not showing on iOS 7.0.3(2015-11-11)
* 1.2.3
	* Bug fixes:
		- Fix memory leak(2015-10-22)
* 1.2.2
	* New features:
		- Support cascading CSS selectors(2015-08-17)
		- Rewrite ITable datasource manipulating methods(2015-09-18)
* 1.2.1
	* New features:
		- Use two round layout for valign(2015-07-31)
* 1.2.0
	* New features:
		- IStyle add setClass() method(2015-07-31)
		- Fix Ilabel auto width issue when it is in small area(2015-07-21)
		- IView supports background image(2015-07-17)
		- IButton supports IEventHighlight|IEventUnhighlight(2015-07-17)
		- Support css file import in XML(2015-07-07)
	* Bug fixes: